# cpptraining

./: README
exercises/: CMakeLists.txt
exercises/common/cppcoro/: shared_task.hpp  single_consumer_async_auto_reset_event.hpp
exercises/coroutines/: ex1.cpp  ex2.cpp  ex3.cpp  ex3_sln.cpp  ex4.cpp  ex4_sln.cpp  ex5.cpp  ex5_sln.cpp  ex6.cpp  ex6_sln.cpp  ex7.cpp  ex7_sln.cpp  main.cpp
exercises/lambda/: ex1.cpp  ex1_sln.cpp  ex2.cpp  ex2_sln.cpp  ex3.cpp  ex3_sln.cpp  main.cpp
exercises/move/: ex1.cpp  ex1_sln.cpp  ex2.cpp  ex2_sln.cpp  ex3.cpp  ex3_sln.cpp  ex4.cpp  ex4_sln.cpp  ex5.cpp  ex5_sln.cpp  ex6.cpp  ex6_sln.cpp  main.cpp
exercises/small/: ex1.cpp  ex1_sln.cpp  ex2.cpp  ex2_sln.cpp  main.cpp
exercises/type_safe/: ex1.cpp  ex1_sln.cpp  ex2.cpp  ex2_sln.cpp  ex3.cpp  ex3_sln.cpp  ex4.cpp  main.cpp
exercises/values/: ex1.cpp  ex1_sln.cpp  ex2.cpp  ex2_sln.cpp  ex3.cpp  ex4.cpp  ex4_sln.cpp  ex5.cpp  ex5_sln.cpp  ex6.cpp  ex6_sln.cpp  main.cpp  type_erasure.cpp
presentations/: 1_move_semantics.pptx  2_lambdas.pptx  3_small_features.pptx  4_strong_types.pptx  5_value_semantics.pptx  6_coroutines.pptx
